
== 2022.08.002

Release in process:

* https://github.com/devonfw/ide/issues/833[#833]: Implementing GitHub CLI
* https://github.com/devonfw/ide/issues/751[#751]: Documentation of functions
* https://github.com/devonfw/ide/issues/832[#832]: Solution for unstable update sites
* https://github.com/devonfw/ide/issues/877[#877]: Update version of vscode to 1.71.0+
* https://github.com/devonfw/ide/issues/879[#879]: Renaming integration-tests and adding badges

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/32?closed=1[milestone 2022.08.002].

== 2022.08.001

New release with various improvements and bugfixes:

* https://github.com/devonfw/ide/issues/840[#840]: Pip Integration and fixing package installation
* https://github.com/devonfw/ide/issues/713[#713]: Python integration
* https://github.com/devonfw/ide/issues/706[#706]: Folder ${M2_REPO} gets created
* https://github.com/devonfw/ide/issues/817[#817]: Update Eclipse to 2022-03 
* https://github.com/devonfw/ide/pull/796[#796]: update sonarqube to 9.4.0.54424
* https://github.com/devonfw/ide/issues/794[#794]: Improve installation process of Rancher Desktop and VPNKit
* https://github.com/devonfw/ide/issues/738[#738]: CLI Lazy Docker integration
* https://github.com/devonfw/ide/issues/819[#819]: add option to create new devonfw-ide installation
* https://github.com/devonfw/ide/issues/810[#810]: Add OpenShift CLI
* https://github.com/devonfw/ide/issues/692[#692]: Improve Windows Terminal with gitbash
* https://github.com/devonfw/ide/issues/786[#786]: Improve Windows Terminal with powershell
* https://github.com/devonfw/ide/issues/849[#849]: Integration of GCViewer
* https://github.com/devonfw/ide/issues/867[#867]: ERROR: Error opening the file. There may be a disk or file system error.
* https://github.com/devonfw/ide/pull/829[#829]: #701: fix registry import paths for Windows Terminal