@@ -1,23 +1,0 @@
-name: Check Commit
-on:
-  workflow_call:
-    outputs:
-      should_run:
-        description: "Check latest commit is less than a day" 
-        value: ${{ jobs.check_commit.outputs.should_run }}
-jobs:
-  check_commit:
-    runs-on: ubuntu-latest
-    name: Check latest commit
-    outputs:
-      should_run: ${{ steps.commit.outputs.should_run }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Print latest_commit
-        run: echo ${{ github.sha }}
-
-      - id: commit
-        continue-on-error: true
-        name: Check latest commit is less than a day
-        if: ${{ github.event_name == 'schedule' }}
-        run: test -z $(git rev-list  --after="24 hours"  ${{ github.sha }}) && echo "::set-output name=should_run::false"
