@@ -1,17 +1,27 @@
 name: Integration Test Ubuntu
-on:
+on: 
   schedule:
    - cron: '0 3 * * *'
 jobs:
-  check_commit:
-    uses: devonfw/ide/.github/workflows/check-commit.yml@master
-    
-  build:
-    needs: check_commit
-    if: ${{ needs.check_commit.outputs.should_run != 'false' }}
+  verify_commit:
     runs-on: ubuntu-latest
+    name: Verify latest commit
+    outputs:
+      RUN_BUILD: ${{ steps.verify_commit.outputs.RUN_BUILD }}
     steps:
-      - name: Checkout code
+      - uses: actions/checkout@v3
+      - id: verify_commit
+        name: Verify latest commit is less than 24 hours
+        if: ${{ github.event_name == 'schedule' }}
+        run: echo '::set-output name=RUN_BUILD::'$(test -n "$(git log --format=%H --since='24 hours ago')" && echo 'true' || echo 'false')
+    
+  test:
+    name: Integration test Ubuntu
+    runs-on: ubuntu-latest
+    needs: verify_commit
+    if: ${{ needs.verify_commit.outputs.RUN_BUILD == 'true' }}
+    steps:
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
           submodules: recursive
@@ -23,3 +33,17 @@ jobs:
         run: |
           export INTEGRATION_TEST=true
           mvn -B -ntp install
+          
+  cancel:
+    name: Cancel this workflow 
+    runs-on: ubuntu-latest
+    needs: verify_commit
+    if: ${{ needs.verify_commit.outputs.RUN_BUILD == 'false' }}
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      OWNER: ${{ github.repository_owner }}
+      REPO: ${{ github.event.repository.name }}
+      RUN_ID: ${{ github.run_id }}
+    steps:
+      - run: |
+          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $GITHUB_TOKEN" "https://api.github.com/repos/$OWNER/$REPO/actions/runs/$RUN_ID/cancel"
